<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jesus.practicaandroid.SextaPantalla">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/lblTest1p"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lblTest1p"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/lblPreg1p"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="25dp"
                android:text="@string/lblPreg1p" />

            <RadioGroup
                android:id="@+id/rd1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp">

                <RadioButton
                    android:id="@+id/rb1_1p"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rb1_1p" />

                <RadioButton
                    android:id="@+id/rb1_2p"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rb1_2p" />

                <RadioButton
                    android:id="@+id/rb1_3p"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rb1_3p" />

                <RadioButton
                    android:id="@+id/rb1_4pç"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rb1_4p" />

            </RadioGroup>

            <TextView
                android:id="@+id/lblPreg2p"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="25dp"
                android:layout_weight="1"
                android:text="@string/lblPreg2p" />

            <CheckBox
                android:id="@+id/ch1p"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/ch1p" />

            <CheckBox
                android:id="@+id/ch2p"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/ch2p" />

            <CheckBox
                android:id="@+id/ch3p"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/ch3p" />

            <CheckBox
                android:id="@+id/ch4p"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:text="@string/ch4p" />

            <TextView
                android:id="@+id/lblPreg3p"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="25dp"
                android:text="@string/lblPreg3p" />

            <RadioGroup
                android:id="@+id/rd3"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp">

                <RadioButton
                    android:id="@+id/rb2_1p"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rb2_1p" />

                <RadioButton
                    android:id="@+id/rb2_2p"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rb2_2p" />

                <RadioButton
                    android:id="@+id/rb2_3p"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rb2_3p" />

                <RadioButton
                    android:id="@+id/rb2_4p"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rb2_4p" />
            </RadioGroup>

            <TextView
                android:id="@+id/lblPreg4p"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="25dp"
                android:text="@string/lblPreg4p" />

            <RadioGroup
                android:id="@+id/rd4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="20dp">

                <RadioButton
                    android:id="@+id/rb3_1p"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rb3_1p" />

                <RadioButton
                    android:id="@+id/rb3_2p"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rb3_2p" />

                <RadioButton
                    android:id="@+id/rb3_3p"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rb3_3p" />

                <RadioButton
                    android:id="@+id/rb3_4p"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/rb3_4p" />
            </RadioGroup>

            <Button
                android:id="@+id/btnAcep"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="100dp"
                android:onClick="pulsaAcep"
                android:text="@string/btnAcep" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
