<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.jesus.practicaandroid.UltimaPantalla">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblTest1"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lblUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:text="@string/lblUsuFinal"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/lblCorrec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblCorrec" />

        <TextView
            android:id="@+id/lblIncorrec"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lblIncorrec" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblVolver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblVolver" />

            <Button
                android:id="@+id/btnVolver"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="pulsaTest"
                android:text="@string/btnVolver" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/lblUrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/lblUrl" />

            <Button
                android:id="@+id/btnUrl"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="pulsaSoluciones"
                android:text="@string/btnUrl" />

        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>
